# JitFromScratch

./: .gitignore  .gitpod.yml  .travis.yml  CMakeLists.txt  ClangCC1Args_Linux.h  ClangCC1Args_OSX.h  ClangCC1Args_Win.h  ClangCC1Driver.cpp  ClangCC1Driver.h  JitFromScratch.cpp  JitFromScratch.h  README.md  SimpleLLDebugAsm.h  SimpleLLDebugInfo.h  SimpleObjectCache.cpp  SimpleObjectCache.h  SimpleOptimizer.cpp  SimpleOptimizer.h  SimpleOrcJit.h  main.cpp
AsmParser/: LLLexer.cpp  LLLexer.h  LLParser.cpp  LLParser.h
cmake/modules/: DefaultToolchain.cmake  LLVM.cmake
docs/docker/: README.md
docs/docker/debug/: Dockerfile
docs/docker/gitpod/: Dockerfile
docs/docker/release/: Dockerfile
docs/docker/test-debug/: Dockerfile
docs/docker/test-release/: Dockerfile
docs/vscode/: README.md  cmake-variants.json  launch.json  settings.json
mangle-demo/: mangle_ref.cpp  mangle_ref_unix  mangle_ref_win.bat
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  objcache.test-debug  stderr.test-debug  stdout.test
versions/llvm05/: README.md
versions/llvm08/: README.md
versions/llvm40/: README.md
